Spacing Issue

--- a/fortuna/static/css/styles.css
+++ b/fortuna/static/css/styles.css
@@ -458,8 +458,7 @@ small.text-muted {
 }
 
 #randomBeerLabel {
-  width: 256px;
-  height: 256px;
+  width: 100%;
   margin-right: 0px;
   padding-right: 0px;
   padding-top: 20px;
